--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,25 @@
 /*  your css code here. If applicable */
+.container{
+	display:flex;
+	text-align:center;
+	width:400px;
+	padding:20px;
+	border-radius:36px;
+	border:4px solid black;
+	background-color:grey;
+}
+.green, .red, .yellow{
+	width:100px;
+	height:100px;
+	border-radius:50px;
+	margin-left:25px;
+}
+.green{
+	background-color:green;
+}
+.yellow{
+	background-color:yellow;
+}
+.red{
+	background-color:red;
+}
